@@ -1,5 +1,5 @@
 /*
- * $Id: installer.c,v 1.29 2025-01-21 23:35:04+05:30 Cprogrammer Exp mbhangui $
+ * $Id: installer.c,v 1.30 2025-02-23 13:17:10+05:30 Cprogrammer Exp mbhangui $
  * taken from ezmlm-0.54
  */
 #include <sys/types.h>
@@ -690,6 +690,8 @@ main(int argc, char **argv)
 	for (;;) {
 		if (getln(&in, &line, &match, '\n') == -1)
 			strerr_die2sys(111, FATAL, "unable to read input");
+		if (!line.len)
+			break;
 		if (line.len > 0)
 			line.s[--line.len] = 0;
 		doit(&line, uninstall, check);
@@ -701,7 +703,7 @@ main(int argc, char **argv)
 void
 getversion_installer_c()
 {
-	static const char *x = "$Id: installer.c,v 1.29 2025-01-21 23:35:04+05:30 Cprogrammer Exp mbhangui $";
+	static const char *x = "$Id: installer.c,v 1.30 2025-02-23 13:17:10+05:30 Cprogrammer Exp mbhangui $";
 
 	if (x)
 		x++;
@@ -709,6 +711,9 @@ getversion_installer_c()
 
 /*
  * $Log: installer.c,v $
+ * Revision 1.30  2025-02-23 13:17:10+05:30  Cprogrammer
+ * fix SIGSEGV
+ *
  * Revision 1.29  2025-01-21 23:35:04+05:30  Cprogrammer
  * Fixes for gcc14
  *
