@@ -10,9 +10,11 @@ Release 3.1-1.1 Start 26/12/2024 End XX/XX/XXXX
     Requires
 - 22/01/2025
 04. Fix errors when using GCC14
-- 02/00/2025
+- 02/02/2025
 05. test-recipients.c: Fix gcc14 warnings
 06. rd-remote.c: initialize use_regex variable before use
+- 23/02/2025
+07. installer.c: Fix SEGSEGV
 
 * Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <indimail-mta@indimail.org 3.0.9-1.1%{?dist}
 Release 3.0.9-1.1 Start 08/08/2024 End 24/12/2024
