@@ -14,6 +14,7 @@ variables
 07. Fix errors when using GCC14
 - 23/02/2025
 08. added svalert script to libexecdir
+09. installer.c: Fix SEGSEGV
 
 * Tue Dec 24 2024 20:28:14 +0000 Manvendra Bhangui <daemontools@indimail.org 1.1.6-1.1%{?dist}
 Release 1.1.6-1.1 Start 13/08/2024 End 24/12/2024
